Changed default page transition to none due to performance issues and "flickering" between pages. Updated CSS to help performance. Updated the plist file to contain the actual name of the app.

--- a/InternetDJMobileiOS/www/jqm-docs.css
+++ b/InternetDJMobileiOS/www/jqm-docs.css
@@ -1,9 +1,9 @@
-body { background: #fff;}
+body { background-color: #fff;}
 
 
 body #divName * 
 { 
-    -webkit-backface-visibility: inherit !important; 
+    -webkit-backface-visibility: hidden; 
     -webkit-box-sizing: inherit !important; 
     -webkit-transform: translate3d(0,0,0) !important; 
 
